# simple_matrix

./: .gitignore  CMakeLists.txt  README.md  TODO.md
src/: app.cpp  wrappers.cpp
src/private/: Matrix.cpp
src/public/: Matrix.h
